2005-10-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/PropertyDefinition.cs:
		Fix setters working on attributes.

	* Mono.Cecil.Cil/CodeWriter.cs:
		Compute max stack before writing method.

	* Mono.Cecil/GenericContext.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Work on generics support.

	* CodeGen/cecil.xml
	  Mono.Cecil/ISecurityDeclarationCollection.cs
	  Mono.Cecil/SecurityDeclarationCollection.cs:
		Remove the security declaration from the codegen.

2005-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil\SecurityDeclaration.cs
		Copy the permission set when cloning.
	* Mono.Cecil\SecurityDeclarationCollection.cs
		Ajusted to use an Hashtable, to Union permission sets on
		the same action and to set/unset HasSecurity when needed.
	* Mono.Cecil\ModuleDefinition.cs:
		Added TODO (remainder) for complete 2.0 format support.
	* Mono.Cecil\ReflectionWriter.cs:
		Move MetadataToken finding outside the loop.
	* Mono.Cecil\ISecurityDeclarationCollection.cs:
		Adjust interface.

2005-10-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/MethodDefinition.cs:
		Add generics parameters in visitor path.

	* Mono.Cecil/GenericParamAttributes.cs:
		Add new constraints flags.

2005-10-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/IGenericParameter.cs
	  Mono.Cecil/AggressiveReflectionReader.cs
	  Mono.Cecil/GenericContext.cs:
		Support generic parameters constraints.

2005-10-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ParameterDefinition.cs
	  Mono.Cecil/PropertyDefinition.cs: