@@ -96,7 +96,7 @@ namespace Mono.Cecil.Cil {
 		public Instruction Create (OpCode opcode, sbyte b)
 		{
 			if (opcode.OperandType != OperandType.ShortInlineI ||
-				opcode.Equals (OpCodes.Ldc_I4_S))
+				opcode == OpCodes.Ldc_I4_S)
 				throw new ArgumentException ("opcode");
 
 			return FinalCreate (opcode, b);
@@ -105,7 +105,7 @@ namespace Mono.Cecil.Cil {
 		public Instruction Create (OpCode opcode, byte b)
 		{
 			if (opcode.OperandType != OperandType.ShortInlineI &&
-				!opcode.Equals (OpCodes.Ldc_I4_S))
+				opcode != OpCodes.Ldc_I4_S)
 				throw new ArgumentException ("opcode");
 
 			return FinalCreate (opcode, b);
