@@ -138,7 +138,7 @@ namespace Mono.Cecil.Cil {
 					instr.Operand = new Label (Convert.ToInt32 (br.BaseStream.Position - start + brtgt));
 					break;
 				case OperandType.ShortInlineI :
-					if (op.Equals (OpCodes.Ldc_I4_S))
+					if (op == OpCodes.Ldc_I4_S)
 						instr.Operand = br.ReadSByte ();
 					else
 						instr.Operand = br.ReadByte ();
