@@ -117,7 +117,7 @@ namespace Mono.Cecil.Cil {
 					m_codeWriter.Write (0);
 					break;
 				case OperandType.ShortInlineI :
-					if (instr.OpCode.Equals (OpCodes.Ldc_I4_S))
+					if (instr.OpCode == OpCodes.Ldc_I4_S)
 						m_codeWriter.Write ((sbyte) instr.Operand);
 					else
 						m_codeWriter.Write ((byte) instr.Operand);
